--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -43,7 +43,7 @@
                     android:gravity="center"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
-                    android:text="Check Internet Speed"
+                    android:text="@string/check_internet_speed"
                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                     android:textColor="#606060" />
 
@@ -119,7 +119,7 @@
                                     android:fontFamily="@font/helvetica"
                                     android:gravity="center"
                                     android:lines="1"
-                                    android:text="Ping Time ⇌"
+                                    android:text="@string/ping"
                                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                                     android:textColor="@color/white"
                                     android:textSize="@dimen/result_label_font_size"
@@ -198,7 +198,7 @@
                                     android:fontFamily="@font/helvetica"
                                     android:gravity="center"
                                     android:lines="1"
-                                    android:text="Download"
+                                    android:text="@string/download"
                                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                                     android:textColor="@color/white"
                                     android:textSize="@dimen/result_label_font_size"
@@ -275,7 +275,7 @@
                                     android:fontFamily="@font/helvetica"
                                     android:gravity="center"
                                     android:lines="1"
-                                    android:text="Upload"
+                                    android:text="@string/upload"
                                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                                     android:textColor="@color/white"
                                     android:textSize="@dimen/result_label_font_size"
@@ -354,7 +354,7 @@
                                 android:gravity="center"
                                 android:paddingLeft="40dp"
                                 android:paddingRight="40dp"
-                                android:text="Start"
+                                android:text="@string/start"
                                 android:textAllCaps="false"
                                 android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                                 android:textColor="#17C679"
@@ -394,7 +394,7 @@
                                     android:gravity="center_horizontal|center_vertical"
                                     android:paddingLeft="50dp"
                                     android:paddingRight="50dp"
-                                    android:text="Stop"
+                                    android:text="@string/stop"
                                     android:textAllCaps="false"
                                     android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                                     android:textColor="#17C679"
